# gradradar

./: .env.example  .gitignore  GRADRADAR_PRD.md  MASTER_PLAN.md  README.md  pyproject.toml
gradradar/: __init__.py  cli.py  cloud.py  config.py  profile.py
gradradar/db/: downloader.py  schema.py  writer.py
gradradar/search/: engine.py  formatting.py  fts_search.py  llm_query.py  narrator.py  recommend.py  reranker.py  sql_search.py  web_search.py
scripts/: audit_enrichment.py  build_anchor_pis.py  build_institution_seeds.py  seed_cloud.py
seeds/: anchor_pis.json  cs_math_topic_ids.json  institutions.json
supabase/: config.toml
supabase/functions/contribute/: index.ts
supabase/migrations/: 20260419000001_init_schema.sql  20260419000002_contributions.sql
tests/: test_build.py  test_fts.py  test_schema.py  test_search.py  test_writer.py
