[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gradradar"
version = "0.1.0"
description = "Discover and evaluate PhD labs and Masters programs in ML/CS/Math"
requires-python = ">=3.11"
license = {text = "CC BY 4.0"}
authors = [{name = "Tomer Weissman"}]

dependencies = [
    "duckdb>=1.0.0",
    "httpx>=0.27.0",
    "playwright>=1.44.0",
    "pdfplumber>=0.11.0",
    "instructor>=1.3.0",
    "litellm>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "readability-lxml>=0.8.0",
    "trafilatura>=1.8.0",
    "pydantic>=2.7.0",
    "boto3>=1.34.0",
    "click>=8.1.0",
    "rich>=13.7.0",
    "ddgs>=9.0.0",
    "python-dotenv>=1.0.0",
    "jellyfish>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]
browser = [
    "playwright>=1.44.0",
]

[project.scripts]
gradradar = "gradradar.cli:main"

[tool.setuptools.packages.find]
include = ["gradradar*"]
